// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) nested expression - string litera…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum dolor sit amet
        \${"consectetur adipiscing elit proin"} ex massa
        hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(2) nested expression - template lite…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum dolor sit amet
        \${"consectetur adipiscing elit proin"} ex massa
        hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(3) double nested expression - string…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum dolor sit amet
        \${\`lorem ipsum dolor sit amet
        \${"consectetur adipiscing elit proin"} ex massa
        hendrerit eu posuere\`}
        ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(4) double nested expression - templa…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum dolor sit amet
        \${\`lorem ipsum dolor sit amet
        \${"consectetur adipiscing elit proin"} ex massa
        hendrerit eu posuere\`}
        ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(5) nested expression - string litera…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum dolor sit amet \${
        condition
          ? "consectetur adipiscing elit proin"
          : \`lorem ipsum dolor sit amet consectetur
            adipiscing elit proin ex massa hendrerit eu
            posuere\`
        } ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(6) nested expression - template lite…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum dolor sit amet \${
        condition
          ? "consectetur adipiscing elit proin"
          : \`lorem ipsum dolor sit amet consectetur
            adipiscing elit proin ex massa hendrerit eu
            posuere\`
        } ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(7) double nested expression - string…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum dolor sit amet
        \${\`lorem ipsum dolor sit amet \${
          condition
            ? "consectetur adipiscing elit proin"
            : \`lorem ipsum dolor sit amet consectetur
              adipiscing elit proin ex massa hendrerit eu
              posuere\`
        } ex massa hendrerit eu posuere\`}
        ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(8) double nested expression - templa…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum dolor sit amet
        \${\`lorem ipsum dolor sit amet \${
          condition
            ? "consectetur adipiscing elit proin"
            : \`lorem ipsum dolor sit amet consectetur
              adipiscing elit proin ex massa hendrerit eu
              posuere\`
        } ex massa hendrerit eu posuere\`}
        ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;
